remove sticky bar on mobile due to css bug

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,36 @@ input {
 	min-width: 0;
 }
 
+input[type="search"]::-webkit-search-cancel-button {
+	-webkit-appearance: none;
+	appearance: none;
+
+	/* Position and size */
+	height: 1rem;
+	width: 1rem;
+	background-image: url('data:image/svg+xml;utf8,<svg fill="%231e1e1e" xmlns="http://www.w3.org/2000/svg" viewBox="5 5 14 14"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>');
+	background-size: 1rem;
+	background-repeat: no-repeat;
+	background-position: center;
+	cursor: pointer;
+	/* Add a cursor pointer to indicate it's clickable */
+}
+
+.dark input[type="search"]::-webkit-search-cancel-button {
+	-webkit-appearance: none;
+	appearance: none;
+
+	/* Position and size */
+	height: 1rem;
+	width: 1rem;
+	background-image: url('data:image/svg+xml;utf8,<svg fill="%23e6e6e6" xmlns="http://www.w3.org/2000/svg" viewBox="5 5 14 14"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>');
+	background-size: 1rem;
+	background-repeat: no-repeat;
+	background-position: center;
+	cursor: pointer;
+	/* Add a cursor pointer to indicate it's clickable */
+}
+
 .glow {
 	filter: drop-shadow(0 0 6px oklch(85.2% 0.199 91.936 / 0.8)) drop-shadow(0 0 6px oklch(0 0 0 / 0.8))
 }
